--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                                     <a href="register.html" class="Lh8quuUewpAe-x0h25rry _3uDl41YpXFQnoZgd_Ue6rP vVdzJDjVRPQ5Lw1WSeQad _2Y_R022Hhc6M9IExmS-aCr">Singles Rostock</a>
                                     <a href="register.html" class="Lh8quuUewpAe-x0h25rry _3uDl41YpXFQnoZgd_Ue6rP vVdzJDjVRPQ5Lw1WSeQad _2Y_R022Hhc6M9IExmS-aCr">Singles Braunschweig</a>
                                 </div>
-                                <div class="_2WALBSYrhcnRwabJCa5zp2">
+                                <div class="_2WALBSYrhcnRwabJCa5zp2 _1HrKjWzGLKCr8rdAIBjhOx">
                                     <div class="XBNqxd3OPTQegfpU8s63W">
                                         <p class="_32pmyOSfjFIApuPkv5n-mv">
                                             <strong>Sind Sie bereit, Ihre Suche auszuweiten?</strong>
